k8s/wordpress/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prodavnica-mariadb-service
  namespace: ar-web-namespace
spec:
  selector:
    app: prodavnica-mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
