k8s/wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prodavnica-wordpress-service
  namespace: ar-web-namespace
spec:
  selector:
    app: prodavnica-wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
